Create test settings component

--- a/libs/ui/src/lib/settings/settings.component.html
+++ b/libs/ui/src/lib/settings/settings.component.html
@@ -1,1 +1,4 @@
-<p>settings works!</p>
+<div *ngFor="let settings of $settings | async">
+  <p>{{ settings.deviceId }}</p>
+  <p>{{ settings.city }}</p>
+</div>
